--- a/Table_Hypotheses.Rmd
+++ b/Table_Hypotheses.Rmd
@@ -17,19 +17,19 @@ header-includes: \usepackage[labelformat=empty]{caption}
 # Note to use, knit to pdf and edit the tex file to remove the header
 # up to the \begin{table}
 
-thecap = "Hypotheses for covariates affecting landings.  $S_t$ is Jul-Sep catch in the current season, $S_{t-1}$ is Jul-Sep catch in the previous season. $N_t$ is the Oct-Mar catch in the current season and $N_{t-1}$ is the Oct-Mar catch in the prior season. DD = hypotheses related to density-dependence. S = hypotheses related to catch during the spawning months. L = hypotheses related to larval and juvenile growth and survival. A = hypotheses affecting all ages. See the introduction for discussion of the literature on the effects of environmental covariates on sardine landings. ns-SST = nearshore SST. r-SST = regional (nearshore and offshore) SST $t$, $t-1$, and $t-2$ indicate current, prior, and two seasons prior."
+thecap = "Hypotheses for covariates affecting landings.  The left column shows the model tested. The value to the left of $\\sim$ is the response: $S_t$ Jul-Sep catch or $N_t$ Oct-Mar catch in the current season. To the right of $\\sim$ are the explanatory variables. $S_{t-1}$ is Jul-Sep catch and $N_{t-1}$ is the Oct-Mar catch in the prior season. DD = hypotheses related to density-dependence. S = hypotheses related to catch during the spawning months. L = hypotheses related to larval and juvenile growth and survival. A = hypotheses affecting all ages. See the introduction for discussion of the literature on the effects of environmental covariates on sardine landings. ns-SST = nearshore SST. r-SST = regional (nearshore and offshore) SST. $t$, $t-1$, and $t-2$ subscripts indicate current, prior, and two seasons prior. ONI and DMI are ENSO indices described in the methods."
 
 fullcap = paste("Table ", ref("tab:hypotheses"), ". ", thecap, sep="")
 
 DD1 = data.frame(
   Hyp="DD1 \\newline $S_t \\sim N_{t-1}$",
-  Des = "$S_t$ is age 1+ age fish and reflects the 0-2yr fish in $N_{t-1}$ which have aged 3-6 months (Nair et al. 2016).",
+  Des = "$S_t$ is age 1+ age fish and reflects the age 0-2 fish in $N_{t-1}$ which have aged 3-6 months (Nair et al. 2016).",
   Response="$S_t$",
   Cov="$N_{t-1}$",
   stringsAsFactors=FALSE)
 
 DD2 = data.frame(
-  Hyp="DD2 \\newline $S_t \\sim S_{t-1} + S_{t-2}$ \n $N_t ~ S_{t-1} + S_{t-2}$",
+  Hyp="DD2 \\newline $S_t \\sim S_{t-1} + S_{t-2}$ \\newline $N_t \\sim S_{t-1} + S_{t-2}$",
   Des = "$S_t$ is age 1+ fish and is dominated by spent post-spawning fish (Nair et al. 2016). $S_t$ should be correlated with the abundance of the spawning stock and cohort strength. If cohort strength persists over time, landings in the current season should correlate with Jul-Sep landings in the previous two seasons.",
   Response="$S_t$ and $N_t$",
   Cov="$S_{t-1}$ and $S_{t-2}$",
@@ -37,7 +37,7 @@ DD2 = data.frame(
 
 DD3 = data.frame(
   Hyp="DD3 \\newline $N_t \\sim N_{t-1}$",
-  Des = "$N_{t-1}$ includes age 0, 1, 2 and 2+ fish (Nair et al. 2016). Thus the 0, 1, and 2 yr fish will appear 1 year later in the $N_t$ landings.",
+  Des = "$N_{t-1}$ includes age 0, 1, 2 and 2+ fish (Nair et al. 2016). Thus the age 0, 1, and 2 fish will appear 1 year later in the $N_t$ landings.",
   Response="$N_t$",
   Cov="$N_{t-1}$",
   stringsAsFactors=FALSE)
@@ -58,7 +58,7 @@ HS2 = data.frame(
 
 HS3 = data.frame(
   Hyp="S3 \\newline $N_t \\sim$ Apr-Mar precipitation in $t$",
-  Des="Precipitation is an indicator of climatic conditions during the period of egg development. This affect the success of spawning, thus affecting the 0-year class and the Oct-Mar catch (Antony Raja 1969, 1974; Srinath 1998).",
+  Des="Precipitation is an indicator of climatic conditions during the period of egg development. This affects the success of spawning, thus affecting the 0-year class and the Oct-Mar catch (Antony Raja 1969, 1974; Srinath 1998).",
   Response="$N_t$",
   Cov="Apr-May and Jun-Jul precipitation in year $t$ and $t-1$",
   stringsAsFactors=FALSE)
@@ -66,49 +66,49 @@ HS3 = data.frame(
 
 HS4 = data.frame(
   Hyp="S4 \\newline $S_t \\sim$ Jun-Sep UPW in $t$",
-  Des="High rates of upwelling drive mature fish further offshore and thus leads to lower exposure to the fishery.  This movement may be driven by advection of high phytoplankton biomass further offshore or increased inputs of low oxygenated water to the surface (Murty and Edelman 1970, Antony Raja 1973, Pillai et al. 1991).",
+  Des="High rates of upwelling (UPW) drive mature fish further offshore and leading to lower exposure to the fishery.  This movement may be driven by advection of high phytoplankton biomass offshore or upwelling of hypoxic water to the surface (Murty and Edelman 1970, Antony Raja 1973, Pillai et al. 1991).",
   Response="$S_t$",
   Cov="Jun-Sep upwelling index in year $t$",
   stringsAsFactors=FALSE)
 
 HS5 = data.frame(
   Hyp="S5 \\newline $S_t \\sim$ Mar-May r-SST in $t$ \\newline $N_t \\sim$ Mar-May r-SST in $t$",
-  Des="Extreme heating events prior to the spring monsoon drives mature fish from the spawning areas, resulting in poor recruitment and fewer age 0 year fish in the Oct-Mar catch (Antony Raja 1973, Pillai et al 1991).",
+  Des="Extreme heating events prior to the monsoon drive mature fish from the spawning areas, resulting in poor recruitment and fewer age 0 fish in the Oct-Mar catch (Antony Raja 1973, Pillai et al 1991).",
   Response="$S_t$ and $N_t$",
   Cov="Nearshore Mar-May SST in year $t$ and $t-1$",
   stringsAsFactors=FALSE)
 
 HL1 = data.frame(
   Hyp="L1 \\newline $S_t \\sim$ Oct-Dec ns-SST $t-1$ \\newline $N_t \\sim$ Oct-Dec ns-SST $t-1$",
-  Des="Larval and juvenile growth and survival is affected by temperature. The temperature in the critical post-monsoon window, when somatic growth of the 0-year fish is highest, should be correlated with future abundance.",
+  Des="Larval and juvenile growth and survival is affected by temperature. SST in the critical post-monsoon window, when somatic growth of the age 0 fish is highest, should be correlated with future abundance.",
   Response="$N_t$ and $S_t$",
   Cov="Nearshore SST during Oct-Dec in year t-1",
   stringsAsFactors=FALSE)
 
 HL2 = data.frame(
   Hyp="L2 \\newline $S_t \\sim$ Jun-Sep UPW in $t-1$ \\& $t$ \\newline $N_t \\sim$ Jun-Sep UPW in $t-1$ \\& $t$",
-  Des="Higher upwelling rates leads to greater phytoplankton productivity, better larval and juvenile growth, and higher landings in the post monsoon Oct-March catch. However, extreme upwelling may decrease this catch, and future catches, due to poor oxygen conditions or advection of phytoplankton biomass.",
+  Des="Higher upwelling rates lead to greater phytoplankton productivity, better larval and juvenile growth, and higher future landings. However, extreme upwelling may decrease catch due to hypoxic conditions or advection of phytoplankton biomass.",
   Response="$N_t$ and $S_t$",
   Cov="Jun-Sep upwelling index in year $t-1$ and $t$",
   stringsAsFactors=FALSE)
 
 HL3 = data.frame(
   Hyp="L3 \\newline $S_t\\sim$ CHL in $t-1$ \\& $t$ \\newline $N_t \\sim$ CHL in $t-1$ \\& $t$",
-  Des="Surface Chl-a is a proxy for phytoplankton abundance and thus food availability, so higher bloom intensities may support greater fish abundance in the current and future years.",
+  Des="Surface chlorophyll-a (CHL) is a proxy for phytoplankton abundance and thus food availability, supporting greater fish abundance, and catch, in the current and future years.",
   Response="$N_t$ and $S_t$",
   Cov="Chl-a density Jun-Sep in year $t-1$ and $t$ (for $N_t$)",
   stringsAsFactors=FALSE)
 
 HA2 = data.frame(
   Hyp="A2 \\newline $S_t \\sim$ ONI in $t-1$ \\newline $N_t \\sim$ ONI in $t-1$",
-  Des="The El Nino/Southern Oscillation (ENSO) impacts a range of environmental parameters (e.g., precipitation, SST, frontal zones, winds, etc.) that may impact spawning and early survival of sardines (Supraba et al. 2016, Rohit et al. 2018).",
+  Des="The El Niño/Southern Oscillation (ENSO) impacts a range of environmental parameters (e.g., precipitation, SST, frontal zones, winds, etc.) that may impact spawning and early survival of sardines (Supraba et al. 2016, Rohit et al. 2018).",
   Response="$N_t$ and $S_t$",
   Cov="ONI in year t-1",
   stringsAsFactors=FALSE)
 
 HA3 = data.frame(
   Hyp="A3 \\newline $S_t \\sim$ DMI in $t-1$ \\newline $N_t \\sim$ DMI in $t-1$ \\& $t$",
-  Des="Negative Dipole Mode Index (DMI) values in Sep-Nov are associated with anoxic events on the Kerala coast while positive values are associated with a absence of such events (Vallivattathillam et al. 2017).",
+  Des="Negative Dipole Mode Index (DMI) values in Sep-Nov are associated with anoxic events on the Kerala coast while positive values are associated with an absence of such events (Vallivattathillam et al. 2017).",
   Response="$N_t$ and $S_t$",
   Cov="DMI in year t-1",
   stringsAsFactors=FALSE)
