--- a/Table_Hypotheses.tex
+++ b/Table_Hypotheses.tex
@@ -1,4 +1,88 @@
+\PassOptionsToPackage{unicode=true}{hyperref} % options for packages loaded elsewhere
+\PassOptionsToPackage{hyphens}{url}
+%
+\documentclass[]{article}
+\usepackage{lmodern}
+\usepackage{amssymb,amsmath}
+\usepackage{ifxetex,ifluatex}
+\usepackage{fixltx2e} % provides \textsubscript
+\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
+  \usepackage[T1]{fontenc}
+  \usepackage[utf8]{inputenc}
+  \usepackage{textcomp} % provides euro and other symbols
+\else % if luatex or xelatex
+  \usepackage{unicode-math}
+  \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
+\fi
+% use upquote if available, for straight quotes in verbatim environments
+\IfFileExists{upquote.sty}{\usepackage{upquote}}{}
+% use microtype if available
+\IfFileExists{microtype.sty}{%
+\usepackage[]{microtype}
+\UseMicrotypeSet[protrusion]{basicmath} % disable protrusion for tt fonts
+}{}
+\IfFileExists{parskip.sty}{%
+\usepackage{parskip}
+}{% else
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{6pt plus 2pt minus 1pt}
+}
+\usepackage{hyperref}
+\hypersetup{
+            pdfborder={0 0 0},
+            breaklinks=true}
+\urlstyle{same}  % don't use monospace font for urls
+\usepackage[margin=1in]{geometry}
+\usepackage{graphicx,grffile}
+\makeatletter
+\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
+\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
+\makeatother
+% Scale images if necessary, so that they will not overflow the page
+% margins by default, and it is still possible to overwrite the defaults
+% using explicit options in \includegraphics[width, height, ...]{}
+\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
+\setlength{\emergencystretch}{3em}  % prevent overfull lines
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+\setcounter{secnumdepth}{0}
+% Redefines (sub)paragraphs to behave more like sections
+\ifx\paragraph\undefined\else
+\let\oldparagraph\paragraph
+\renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
+\fi
+\ifx\subparagraph\undefined\else
+\let\oldsubparagraph\subparagraph
+\renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
+\fi
 
+% set default figure placement to htbp
+\makeatletter
+\def\fps@figure{htbp}
+\makeatother
+
+\usepackage[labelformat=empty]{caption}
+\usepackage{booktabs}
+\usepackage{longtable}
+\usepackage{array}
+\usepackage{multirow}
+\usepackage{wrapfig}
+\usepackage{float}
+\usepackage{colortbl}
+\usepackage{pdflscape}
+\usepackage{tabu}
+\usepackage{threeparttable}
+\usepackage{threeparttablex}
+\usepackage[normalem]{ulem}
+\usepackage{makecell}
+\usepackage{xcolor}
+
+\author{}
+\date{\vspace{-2.5em}}
+
+\begin{document}
+
+\renewcommand{\arraystretch}{1.2}
 
 \begin{table}
 
@@ -39,7 +123,7 @@ L1 \newline $S_t \sim$ Oct-Dec ns-SST $t-1$ \newline $N_t \sim$ Oct-Dec ns-SST $
 \hline
 L2 \newline $S_t \sim$ Jun-Sep UPW in $t-1$ \& $t$ \newline $N_t \sim$ Jun-Sep UPW in $t-1$ \& $t$ & Higher upwelling rates lead to greater phytoplankton productivity, better larval and juvenile growth, and higher future landings. However, extreme upwelling may decrease catch due to hypoxic conditions or advection of phytoplankton biomass.\\
 \hline
-L3 \newline $S_t\sim$ CHL in $t-1$ \& $t$ \newline $N_t \sim$ CHL in $t-1$ \& $t$ & Surface chlorophyll-a is a proxy for phytoplankton abundance and thus food availability, supporting greater fish abundance, and catch, in the current and future years.\\
+L3 \newline $S_t\sim$ CHL in $t-1$ \& $t$ \newline $N_t \sim$ CHL in $t-1$ \& $t$ & Surface chlorophyll-a (CHL) is a proxy for phytoplankton abundance and thus food availability, supporting greater fish abundance, and catch, in the current and future years.\\
 \hline
 A1 \newline $S_t \sim$ 2.5-yr ave. ns-SST \newline $N_t \sim$ 2.5-yr ave. ns-SST & Spawning, early survival, and recruitment of sardines depends on a multitude of cascading factors summarized by the multi-year average  nearshore SST. The multi-year average SST has been correlated with recruitment and abundance in other sardines (Checkley et al. 2017) and is related to the optimal temperature windows for sardines (Takasuka et al. 2007).\\
 \hline
@@ -50,3 +134,4 @@ A3 \newline $S_t \sim$ DMI in $t-1$ \newline $N_t \sim$ DMI in $t-1$ \& $t$ & Ne
 \end{tabular}
 \end{table}
 
+\end{document}
